--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <ul>
         <li>Meat Lover után ul
             <ul>
-                <li>li meat1</li>
-                <li>li meat2</li>
-                <li>li meat3 ul záro ezután</li>
+                <li>meat1</li>
+                <li>meat2</li>
+                <li>meat3</li>
             </ul>
         </li>
         <li>Vegetarian</li>
