--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <a target="blank" href="https://schoolnightvegan.com/home/vegan-burger-recipe/">
         <img width="56" src="img/classic-vegan-burgers-6-819x1024.webp"
-            alt="copy relative path// vakokank // _bl a blank">
+            alt="ha nem jelenik meg a kép valami miatt, vagy látássérültek használják felolvasásra">
     </a>
 
 
