--- a/xcuccok amik nem kellenek az oldalra de jo ha van.html
+++ b/xcuccok amik nem kellenek az oldalra de jo ha van.html
@@ -142,3 +142,6 @@ PS X:\x\notdet.github.io>
 
 live server nagyon fontos http://127.0.0.1:5500/index.html
 VSC terminal ctrl+shift+ö
+rendszertelen lista <ul><li></li></ul>
+<img width="56" src="img/classic-vegan-burgers-6-819x1024.webp"
+            alt="copy relative path// vakokank // _bl a blank">
